[PS-81] Fix a bug with double derailments not being rolled back
